feat: add ExtraAcC compatibility for 0.0.17